fix:overflow x of timeline

--- a/pages/agenda/styles.css
+++ b/pages/agenda/styles.css
@@ -87,6 +87,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 .time-item {
   font-size: 1.2em;
